--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+      ratione, nemo error accusantium, voluptatibus possimus eaque deleniti
+      delectus minus maxime odio soluta magni consequatur earum. Totam iure
+      veniam itaque odio!
+    </p>
   </body>
 </html>
